[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aoc_2024"
version = "1.0.0"
authors = [{ name = "Nicholas Hansen", email = "ndhansen@leskat.net" }]
description = "Advent of Code 2024"
requires-python = ">=3.13"
dependencies = [
  "parse",
  "watchfiles",
  "rich",
  "regex",
  "aoc @ {root:parent:uri}/advent_of_code_utils",
]

[project.optional-dependencies]
dev = ["pudb", "bpython", "mypy", "ruff", "ipython"]

[project.entry-points.aoc]
base = "aoc_2024"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["parse"]
ignore_missing_imports = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.pyright]
extraPaths = ["../advent_of_code_utils/"]
